# leeloo

./: .gitignore  Dockerfile  Procfile  README.md  Vagrantfile  app.json  docker-compose.yml  leeloo.cabal  stack.yaml
app/: Api.hs  Controller.hs  Main.hs
db/: schema
src/: App.hs  Base.hs  Bot.hs  Bots.hs  Logging.hs  Model.hs  Plugin.hs  Types.hs
src/Adapters/: CLI.hs  Slack.hs
src/Adapters/Slack/: Api.hs  Types.hs
src/Bot/: Boot.hs  Logic.hs  Registry.hs  Slack.hs  Supervisor.hs
src/Plugins/: Base.hs  Die.hs  Divide.hs  Echo.hs  Help.hs  Panic.hs  Score.hs
src/Types/: Slack.hs
