name:                leeloo
version:             0.1.0.0
synopsis:            TODO Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/leeloo
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                     , OverloadedStrings
                     , RecordWildCards
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     App
                     , Base
                     , Bot
                     , Bots
                     , Logging
                     , Plugins.Panic
  build-depends:       base >= 4.7 && < 5
                     , replicant
                     , aeson
                     , aeson-pretty
                     , ansi-terminal
                     , attoparsec
                     , bytestring
                     , containers
                     , either
                     , fast-logger
                     , hedis-namespace
                     , monad-logger
                     , mtl
                     , resourcet
                     , text
                     , transformers
                     , uuid
                     , wreq

executable leeloo
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                     , OverloadedStrings
                     , RecordWildCards
                     , TemplateHaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Api
                     , Controller
  build-depends:       base
                     , leeloo
                     , replicant
                     , aeson
                     , servant-server
                     , text
                     , wai
                     , wai-extra
                     , warp


test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
  build-depends:       base
                     , leeloo
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/githubuser/leeloo
